# Simple-Proxy-Server

./: README.md
Projekt_Proxy_Final/MyProxy/: CMakeLists.txt
Projekt_Proxy_Final/MyProxy/certs/: server.crt  server.key
Projekt_Proxy_Final/MyProxy/src/: QoS.hpp  SOCKS5.hpp  SocketWrapper.hpp  client  client.cpp  main.cpp
